@@ -631,3 +631,5 @@
 	 input layer.
 20040311 input.[ch],keysyms.dat,ui/options.dat,ui/sdl/sdlkeyboard.c,widget/:
 	 widgets and SDL UI working with the new input layer code.
+20040311 ui/xlib/{xdisplay.c,xkeyboard.c}: make Xlib UI work with new
+	 input layer code.
